--- a/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
@@ -1006,7 +1006,7 @@
 "create_story_pop_up_message" = "История создана";
 "create_story_path_to_story" = "Фото и Видео >  Мои истории";
 "You can not share empty album" = "Вы не можете поделиться пустым альбомом";
-"etk_permission_description" = "Настоящим я даю согласие на получение коммерческих сообщений по электронной почте, чтобы получать информацию о выгодных продуктах и ​​услугах Turkcell и компаний Группы до тех пор, пока я не потребую иного в соответствии с Законом № 6563 и другим применимым законодательством.";
+"etk_permission_description" = "";
 "global_permission_title_label" = "Глобальное разрешение на передачу данных";
 "global_permission_description" = "Я даю согласие на передачу моей личной информации операторам, сотрудничающим с Turkcell, чтобы я мог использовать выгодные услуги соответствующего оператора в отношении lifebox.";
 "terms_and_use_etk_checkbox_header" = "Коммерческое электронное сообщение";
@@ -1507,7 +1507,7 @@
 "import_from_facebook_started" = "Начался импорт из Facebook.";
 "instapick_hashtags_copied" = "Хэштеги скопированы.";
 "create_story_selection_limit" = "Пожалуйста, выберите максимум %d фотографий.";
-"etk_html" = "<p><b> COMMERCIAL ELECTRONIC MESSAGE AND DATA CONSENT</b></p>\n\n<p>I hereby consent to allow Lifecell Bulut Çözümleri A.Ş., Turkcell İletişim Hizmetleri A.Ş. and <a href=\"https://www.turkcell.com.tr/tr/hakkimizda/genel-bakis/istiraklerimiz\">Group Companies</a> to process my personal data and share them with the parties listed in the Permission Policy and send me commercial electronic messages in line with the “Permission Policy” <a href=\"https://www.turkcell.com.tr/tr/hakkimizda/duyurular/veribilgi-isleme-izni\">available here</a> unless requested otherwise by me as per Law No. 6563 and other applicable regulations for the purposes of informing me on discounts, deals and special offers, which are in accordance with my needs and preferences regarding the products and services of these companies. I acknowledge that I can revoke my consent for processing/sharing of my personal data or receiving commercial electronic mails and detailed information on the scope and revocation of such consent are available within the scope of the <a href=\"https://www.turkcell.com.tr/tr/hakkimizda/duyurular/veribilgi-isleme-izni\">\"Permission Policy\"</a>.   </p> \n";
+"etk_html" = "";
 "free_up_space_alert_title" = "Освободите Место на вашем телефоне";
 "free_up_space_no_duplicates" = "У вас нет повторяющихся фотографий / видео.";
 "free_up_space_in_progress" = "Ваш список повторяющихся файлов еще не готов, пожалуйста, попробуйте позже.";
@@ -1976,8 +1976,46 @@
 "contact_sync_storage_fail_cont_button" = "Далее";
 "save_to_my_lifebox_full_storage_title" = "Область Хранения iPhone Заполнена";
 "save_to_my_lifebox_full_storage_body" = "Вы можете освободить место на этом iPhone, управляя областью хранения в Настройках.";
-"places_map_title" = "";
-"map_location_detail_header" = "";
-"beeline_feature_cancel_TC" = "";
-"security_popup_body" = "";
-"security_popup_header" = "";
+"places_map_title" = "Карта";
+"map_location_detail_header" = "Фотографии в Этом Месте";
+"beeline_feature_cancel_TC" = "Beeline";
+"security_popup_body" = "Пожалуйста, заполните хотя бы 1 поле, для восстановления учетной записи, если вы забудете свой пароль";
+"security_popup_header" = "Укажите адрес Электронной Почты Восстановления или Секретный Вопрос";
+"save_to_my_billo" = "Сохранить в Billo";
+"save_to_my_billo_download" = "Вы хотите загрузить файл Billo  - %@ - %@.zip?";
+"on_boarding_btn_google_login" = "Войти через Google";
+"on_boarding_or" = "или";
+"on_boarding_btn_apple_login" = "Войти через Apple";
+"google_login_user_exists_body" = "Имеется учетная запись lifebox, зарегистрированная на адрес электронной почты %@. Чтобы связать идентификатор входа Google с существующей учетной записью lifebox, вы должны сначала ввести свой пароль lifebox.";
+"settings_googe_apple_connect" = "Параметры Входа";
+"settings_googe" = "Войти с Учетной Записью Google";
+"settings_apple" = "Войти с Учетной Записью Apple";
+"settings_google_password_required" = "Чтобы отключить вход через Google ID, сначала необходимо установить пароль lifebox.";
+"settings_google_apple_connect" = "Параметры Входа";
+"settings_google" = "Войти с учетной записью Google";
+"settings_change_password_google_warning" = "Чтобы изменить пароль, вы должны войти в свою учетную запись lifebox с помощью своего Google ID.";
+"settings_change_password_apple_warning" = "Чтобы изменить пароль, вы должны войти в lifebox, используя свой Apple ID.";
+"settings_change_password_apple_google_warning" = "Чтобы изменить пароль, вам необходимо войти в lifebox с помощью своего Google ID или Apple ID.";
+"settings_googe_apple_set_password" = "Установить пароль для lifebox";
+"settings_google_apple_mail_match_error" = "Для подключения вашей учетной записи к lifebox ваш адрес электронной почты должен быть одинаковым на каждой платформе.";
+"googe_apple_login_invalid_token" = "Неверная попытка входа в систему, проверьте свои учетные данные и повторите попытку.";
+"settings_google_apple_empty_mail_error" = "Вы должны добавить адрес электронной почты в свою учетную запись.";
+"password_change_external_auth_required_error" = "Чтобы изменить свой пароль, вы можете либо войти в свою учетную запись lifebox, используя свой идентификатор Google ID/Apple ID, либо следовать инструкциям по забытому паролю на экране входа в систему.";
+"password_change_forgot_password_required_error" = "Чтобы изменить свой пароль, вы должны сначала выйти из своей учетной записи и следовать инструкциям «Забыл Пароль» на экране входа в систему.";
+"kvkk_toggle_desc" = "Согласие на Обработку/Обмен Данных";
+"kvkk_toggle_text" = "Настоящим я даю свое согласие на обработку моих личных данных Lifecell Bulut Çözümleri A.Ş. и передачу их сторонам, указанным в %@.";
+"security_popup_warning_header" = "Введена Неверная Информация";
+"security_popup_warning_body1" = "Контрольный вопрос успешно сохранен, произошла следующая ошибка электронного адреса восстановления:";
+"security_popup_warning_body2" = "Электронный адрес для восстановления успешно сохранен, произошла следующая ошибка контрольного вопроса:";
+"security_popup_warning_footer" = "Вы можете повторно ввести свой резервный адрес электронной почты через Настройки -> Данные Учетной Записи -> Мой Профиль.";
+"apple_login_user_exists_body" = "Имеется учетная запись lifebox, зарегистрированная на адрес электронной почты %@. Для подключения метода «Вход с Apple ID» к существующей учетной записи lifebox, вы должны сначала ввести свой пароль lifebox.";
+"settings_apple_password_required" = "Для отключения входа через Apple ID необходимо установить пароль lifebox.";
+"apple_login_show_mail_warning" = "Для входа в систему с помощью Apple ID вам необходимо разрешить доступ к вашему адресу электронной почты в lifebox. Нажмите кнопку ниже для перехода на страницу настроек и следуйте инструкциям по удалению учетной записи lifebox в разделе Apple ID > Пароль и Безопасность > Приложения Использующие Apple ID и повторите шаги для повторного входа в систему с помощью вашего Apple ID.";
+
+/*Fuzzy*/
+"ETK_KVKK_Izin_Politikasi" = "Политика Разрешений";
+"kvkk_firms_link" = "";
+"kvkk_commercial_info_link" = "";
+"ETK_KVKK_Izin_Politikası" = "";
+"syncing" = "";
+"downloading" = "";
