--- a/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
@@ -2052,4 +2052,6 @@
 "ETK_KVKK_Izin_Politikasi" = "Permission Policy";
 "kvkk_firms_link" = "";
 "kvkk_commercial_info_link" = "";
+"syncing" = "Syncing";
+"downloading" = "Downloading";
 "ETK_KVKK_Izin_Politikası" = "Permission Policy";
