--- a/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
@@ -2024,4 +2024,6 @@
 "ETK_KVKK_Izin_Politikasi" = "İzin Politikası";
 "kvkk_firms_link" = "";
 "kvkk_commercial_info_link" = "";
+"syncing" = "";
+"downloading" = "";
 "ETK_KVKK_Izin_Politikası" = "";
